--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div id="app" style="padding: 0"></div>
 
     
-    <!-- <script type="text/javascript">
+    <script type="text/javascript">
       window.__lc = window.__lc || {};
-      window.__lc.license = '18364611';
+      window.__lc.license = '18847209';
       window.__lc.chat_between_groups = true; // Nếu bạn cần sử dụng tính năng này
       (function() {
         var lc = document.createElement('script');
@@ -47,7 +47,7 @@
           window.LiveChatWidget.call('hide');
         });
       };
-    </script> -->
+    </script>
     <script type="module" src="/src/main.js"></script>
     <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
